fixed a bug that caused the score bar to be stuck at the bottom of the webpage + moved a score card element shared between games to the main.css page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,7 +217,7 @@ a {
         background: white;
         border-radius: 8px;
         border: 3px solid green;
-        height: 25px;
+        max-height: 25px;
     }
     
     .game-scorecard fieldset {
